--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "axios": "^1.8.4",
     "daisyui": "^5.0.27",
     "next": "15.3.1",
     "react": "^19.0.0",
