--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@prisma/client": "^6.6.0",
     "axios": "^1.8.4",
     "daisyui": "^5.0.27",
+    "html-to-text": "^9.0.5",
     "next": "15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.4",
